data/derived/sp14/progs/unify/prog1571.ml.out
Characters 203-204:
  let args = List.combine 0::(List.rev l1) 0::(List.rev l2) in
                          ^
Error: This expression has type int but an expression was expected of type
         'a list
